--- a/components/app/Header/header.module.scss
+++ b/components/app/Header/header.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/scss/shared.scss';
+@import "../../../styles/scss/shared.scss";
 .header {
   background: transparent;
   padding: 1rem 0;
