--- a/components/pages/home/Committee/style.module.scss
+++ b/components/pages/home/Committee/style.module.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/scss/shared.scss';
-@import '../../home/Partner/partner.module.scss';
+@import "../../../../styles/scss/shared.scss";
+@import "../../home/Partner/partner.module.scss";
 
 .writing {
   font-weight: 500;
