--- a/components/pages/home/Countdown/countdown.module.scss
+++ b/components/pages/home/Countdown/countdown.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/scss/shared.scss';
+@import "../../../../styles/scss/shared.scss";
 .container {
   margin: 1rem 0;
   @include md {
