--- a/components/template/bannerWithImage.module.scss
+++ b/components/template/bannerWithImage.module.scss
@@ -6,7 +6,7 @@
   min-height: 100vh;
   background-attachment: fixed;
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
