--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,14 @@
-@import './reset.css';
-@import '../fonts/work-sans/index.css';
-@import '../fonts/poppins/index.css';
+@import "./reset.css";
+@import "../fonts/work-sans/index.css";
+@import "../fonts/poppins/index.css";
 /* header font  */
 
 header {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
-  font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 
 /* h1,
