--- a/components/pages/challenge/PitchCompetition/PitchDescriptionCard/card.module.scss
+++ b/components/pages/challenge/PitchCompetition/PitchDescriptionCard/card.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/scss/shared.scss';
+@import "../../../../../styles/scss/shared.scss";
 
 .wrapper {
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
