--- a/components/pages/home/Countdown/Element/element.module.scss
+++ b/components/pages/home/Countdown/Element/element.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/scss/shared.scss';
+@import "../../../../../styles/scss/shared.scss";
 
 .container {
   padding: 0.5rem 1.5rem;
