--- a/components/pages/home/Timeline/Element/element.module.scss
+++ b/components/pages/home/Timeline/Element/element.module.scss
@@ -1,4 +1,4 @@
-@import '../.../../../../../../styles/scss/shared.scss';
+@import "../.../../../../../../styles/scss/shared.scss";
 .container {
   display: grid;
   padding-bottom: 0.5rem;
