--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 @import "./reset.css";
 @import "../fonts/work-sans/index.css";
 @import "../fonts/poppins/index.css";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 /* header font  */
 
 header {
@@ -8,7 +9,7 @@ header {
 }
 
 html {
-  font-family: "Work Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* h1,
