--- a/components/pages/home/Banner/style.module.scss
+++ b/components/pages/home/Banner/style.module.scss
@@ -1,16 +1,13 @@
 @import "../../../../styles/scss/shared";
 
 .title {
-  line-height: 130%;
-  letter-spacing: 2px;
-  font-weight: 800;
-  font-size: 6.5vw;
-  @include md {
-    font-size: 2.75rem;
-  }
-  @include xl {
-    font-size: 3.5rem;
-  }
+  // font-size: 6.5vw;
+  // @include md {
+  //   font-size: 2.75rem;
+  // }
+  // @include xl {
+  //   font-size: 3.5rem;
+  // }
 }
 
 .bigger {
