--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,3 @@
-@import "./reset.css";
 @import "../fonts/work-sans/index.css";
 @import "../fonts/poppins/index.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
@@ -23,4 +22,10 @@ h5 {
 /* WARNING ONLY USE FOR PROD */
 body {
   overflow-x: hidden;
+}
+
+.mcontainer {
+  max-width: 1300px;
+  margin: auto;
+  padding: 0rem 1rem;
 }
