--- a/styles/scss/shared.scss
+++ b/styles/scss/shared.scss
@@ -1,4 +1,4 @@
-@import "./breakpoints.scss";
-@import "./colors.scss";
-@import "./template.scss";
-@import "./dimension.scss";
+@import './breakpoints.scss';
+@import './colors.scss';
+@import './template.scss';
+@import './dimension.scss';
