--- a/components/pages/access/Banner/style.module.scss
+++ b/components/pages/access/Banner/style.module.scss
@@ -1,11 +1,11 @@
-@import "../../../../styles/scss/shared.scss";
+@import '../../../../styles/scss/shared.scss';
 
 .disabled {
-  cursor: default;
-  background: grey;
-  color: #ffffff80;
-  &:hover {
-    background: grey;
-    color: #ffffff80;
-  }
+	cursor: default;
+	background: grey;
+	color: #ffffff80;
+	&:hover {
+		background: grey;
+		color: #ffffff80;
+	}
 }
