--- a/components/pages/home/Committee/style.module.scss
+++ b/components/pages/home/Committee/style.module.scss
@@ -1,22 +1,22 @@
-@import "../../../../styles/scss/shared.scss";
-@import "../../home/Partner/partner.module.scss";
+@import '../../../../styles/scss/shared.scss';
+@import '../../home/Partner/partner.module.scss';
 
 .writing {
-  font-weight: 500;
-  margin-bottom: 2.5rem;
+	font-weight: 500;
+	margin-bottom: 2.5rem;
 }
 
 .accent {
-  color: $main;
+	color: $main;
 }
 
 .reduced {
-  padding-top: 5rem;
+	padding-top: 5rem;
 }
 
 .gr {
-  @include md {
-    grid-template-columns: 1fr 1fr;
-    padding: 0 3rem;
-  }
+	@include md {
+		grid-template-columns: 1fr 1fr;
+		padding: 0 3rem;
+	}
 }
