--- a/components/shared/basePage.module.scss
+++ b/components/shared/basePage.module.scss
@@ -1,8 +1,8 @@
-@import "../../styles/scss/shared.scss";
+@import '../../styles/scss/shared.scss';
 
 .bigger {
-  font-size: 5rem;
-  @include md {
-    font-size: 6rem;
-  }
+	font-size: 5rem;
+	@include md {
+		font-size: 6rem;
+	}
 }
