--- a/components/template/bannerWithImage.module.scss
+++ b/components/template/bannerWithImage.module.scss
@@ -1,16 +1,16 @@
 .wrapper {
-  position: relative;
-  color: white;
-  place-items: center;
-  display: grid;
-  min-height: 100vh;
-  background-attachment: fixed;
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+	position: relative;
+	color: white;
+	place-items: center;
+	display: grid;
+	min-height: 100vh;
+	background-attachment: fixed;
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
 }
