--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,14 +1,14 @@
-@import "./shared.scss";
+@import './shared.scss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
-  font-size: 16px;
-  @include md {
-    font-size: 14px;
-  }
-  @include xl {
-    font-size: 16px;
-  }
+	font-size: 16px;
+	@include md {
+		font-size: 14px;
+	}
+	@include xl {
+		font-size: 16px;
+	}
 }
