--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -27,9 +27,10 @@ body {
 }
 
 .mcontainer {
-	max-width: 1300px;
+	max-width: 1350px;
 	margin: auto;
-	padding: 0rem 1rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
 
 img {
